# housing_price

./: House_Sales_in_King_Count_USA.ipynb  README.md  pyproject.toml
